# saveli

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
res/: windows.json
src/: database.rs  errors.rs  game.rs  linker.rs  main.rs  settings.rs
