[package]
name = "saveli"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

[dependencies]
error-chain = { version = "0.12", default-features = false }
fs_extra = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "1.0"
tempfile = "3.1"
clap = "2"