[package]
name = "saveli"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
app_dirs = "1"
clap = "2"
error-chain = { version = "0.12", default-features = false }
fs_extra = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "1"
tempfile = "3"
